--- a/app/src/main/res/layout-large/content_service_area.xml
+++ b/app/src/main/res/layout-large/content_service_area.xml
@@ -8,37 +8,40 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/mittsie"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.andreakim.kkspetsapp.ServiceAreaActivity"
     tools:showIn="@layout/activity_service_area">
 
-    <TextView
-        android:id="@+id/service"
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginBottom="18dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:text="@string/service"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textStyle="bold" />
+        app:cardBackgroundColor="@color/colorMidColor"
+        android:elevation="100dp"
+        app:cardElevation="100dp"
+        app:cardCornerRadius="16dp">
 
-    <TextView
-        android:id="@+id/textView_result"
+        <TextView
+            android:id="@+id/service"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:text="@string/service"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textStyle="bold" />
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/secondcardview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/editView"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:text="@string/resultHint"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textStyle="bold" />
+        app:cardBackgroundColor="@color/colorMidColor"
+        android:elevation="100dp"
+        app:cardElevation="100dp"
+        app:cardCornerRadius="16dp">
 
-
-    <ImageView
+        <ImageView
         android:id="@+id/staticMap"
         android:layout_width="match_parent"
         android:layout_height="140dp"
@@ -47,8 +50,10 @@
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
+        android:visibility="gone"
         android:layout_marginTop="24dp" />
 
+    </android.support.v7.widget.CardView>
     <Button
         android:id="@+id/home_button"
         android:layout_width="wrap_content"
@@ -63,14 +68,14 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/service"
-        android:layout_below="@+id/service"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:background="@drawable/mybutton"
         android:paddingEnd="9dp"
         android:paddingStart="9dp"
-        android:text="@string/submit" />
+        android:text="@string/submit"
+        android:layout_alignEnd="@+id/textView_result"
+        android:layout_above="@+id/textView_result" />
 
     <EditText
         android:id="@+id/editView"
@@ -85,5 +90,18 @@
         android:inputType="number"
         android:maxLength="5">
     </EditText>
+
+    <TextView
+        android:id="@+id/textView_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:textColor="@color/white"
+        android:layout_marginRight="16dp"
+        android:text="@string/resultHint"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textStyle="bold"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
