--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorMidColor">#769ED5</color>
     <color name="colorPrimaryDark">#126CB9</color>
     <color name="colorAccent">#ff4081</color>
+    <color name="white">#ffffff</color>
 </resources>
