--- a/app/src/main/res/layout-large/content_service_area.xml
+++ b/app/src/main/res/layout-large/content_service_area.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/mittsie"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/mittsie"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.andreakim.kkspetsapp.ServiceAreaActivity"
     tools:showIn="@layout/activity_service_area">
@@ -17,10 +17,10 @@
         android:id="@+id/cardview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/colorMidColor"
         android:elevation="100dp"
-        app:cardElevation="100dp"
-        app:cardCornerRadius="16dp">
+        app:cardBackgroundColor="@color/colorMidColor"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="100dp">
 
         <TextView
             android:id="@+id/service"
@@ -36,10 +36,10 @@
         android:id="@+id/secondcardview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/colorMidColor"
         android:elevation="100dp"
-        app:cardElevation="100dp"
-        app:cardCornerRadius="16dp">
+        app:cardBackgroundColor="@color/colorMidColor"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="100dp">
 
         <ImageView
         android:id="@+id/staticMap"
@@ -50,32 +50,32 @@
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:visibility="gone"
-        android:layout_marginTop="24dp" />
+        android:layout_marginTop="24dp"
+        android:visibility="gone" />
 
     </android.support.v7.widget.CardView>
     <Button
         android:id="@+id/home_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
         android:layout_marginLeft="16dp"
         android:background="@drawable/mybutton"
-        android:text="@string/home"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:text="@string/home" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/textView_result"
+        android:layout_alignEnd="@+id/textView_result"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:background="@drawable/mybutton"
         android:paddingEnd="9dp"
         android:paddingStart="9dp"
-        android:text="@string/submit"
-        android:layout_alignEnd="@+id/textView_result"
-        android:layout_above="@+id/textView_result" />
+        android:text="@string/submit" />
 
     <EditText
         android:id="@+id/editView"
@@ -88,20 +88,22 @@
         android:layout_toStartOf="@+id/button"
         android:imeOptions="actionDone"
         android:inputType="number"
-        android:maxLength="5">
+        android:maxLength="5"
+        android:textColor="@color/white">
     </EditText>
 
     <TextView
         android:id="@+id/textView_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="16dp"
         android:layout_marginLeft="16dp"
-        android:textColor="@color/white"
         android:layout_marginRight="16dp"
         android:text="@string/resultHint"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textStyle="bold"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:textColor="@color/white"
+        android:textStyle="bold" />
 
 </RelativeLayout>
