--- a/app/src/main/res/layout/content_service_area.xml
+++ b/app/src/main/res/layout/content_service_area.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.andreakim.kkspetsapp.ServiceAreaActivity"
+    tools:context="com.andreakim.kkspetschicago.ServiceAreaActivity"
     tools:showIn="@layout/activity_service_area">
 
     <TextView
